# ldaca-app

./: .gitignore  LDaCa_Analysis.ipynb  README.md  index.ipynb  pyproject.toml  run.sh  start
.binder/: Dockerfile  LDaCA_Access.ipynb  README.md  SETUP_COMPLETE.md  Welcome_to_LDaCA.ipynb  binder-start.sh  build-binder.sh  environment.yml  jupyter_server_config.py  jupyterhub-singleuser  postBuild  start  start-notebook.sh  supervisord-binder.conf
.github/workflows/: repo2docker-dockerhub.yml
binder/: Dockerfile  environment.yml  postBuild
docframe/: .gitignore  README.md  pyproject.toml  pytest.ini
docframe/docframe/: __init__.py  utils.py
docframe/docframe/core/: __init__.py  docframe.py  text_namespace.py  text_utils.py
docframe/docs/: api_reference.md  design_philosophy.md
docframe/examples/: demo.ipynb
docframe/examples/data/ADO/: qldelection2020_candidate_tweets.csv
docframe/tests/: README.md  __init__.py  conftest.py  test_auto_detection.py  test_comprehensive.py  test_core.py  test_doclazyframe.py  test_io.py  test_io_comprehensive.py  test_library.py  test_namespace.py  test_text_processing.py  test_text_utils.py  test_utilities.py
docworkspace/: .gitignore  README.md  pyproject.toml
docworkspace/docworkspace/: __init__.py  node.py  workspace.py
docworkspace/examples/data/ADO/: candidate_info_gender.csv
docworkspace/tests/: __init__.py  conftest.py  test_advanced_operations.py  test_coverage.py  test_error_handling.py  test_fastapi_integration.py  test_integration.py  test_node.py  test_simple_operations.py  test_workspace.py  test_workspace_serialization_types.py
ldaca_web_app/: .gitignore
ldaca_web_app/backend/: .env.example  config.py  db.py  init_db.py  main.py  migrate_db.py  pyproject.toml
ldaca_web_app/backend/api/: admin.py  auth.py  files.py  text.py  users.py  workspaces.py
ldaca_web_app/backend/core/: api_models.py  auth.py  docworkspace_api.py  utils.py  workspace.py
ldaca_web_app/backend/docs/: API_DOCUMENTATION.md  MIGRATION_GUIDE.md  USER_FOLDER_IMPLEMENTATION.md
ldaca_web_app/backend/models/: __init__.py
ldaca_web_app/backend/tests/: __init__.py  conftest.py  test_concordance_detach_doc_type.py
ldaca_web_app/backend/tests/fixtures/: mock_responses.py  sample_data.py
ldaca_web_app/backend/tests/integration/: __init__.py  test_api_auth.py  test_api_workspaces.py  test_lazy_flow.py  test_main.py
ldaca_web_app/backend/tests/unit/: __init__.py  test_config.py  test_core_utils.py  test_data_casting.py  test_datatype_detection.py  test_db.py  test_frontend_sync.py  test_join_behavior.py
ldaca_web_app/frontend/: package.json
ldaca_web_app/frontend/public/: index.html
ldaca_web_app/frontend/src/: App.tsx  api.ts  index.css  index.tsx
ldaca_web_app/frontend/src/components/: ConcordanceTab.tsx  CustomNode.tsx  DataLoaderTab.tsx  DataTable.tsx  DatetimeFormatModal.tsx  DocumentColumnModal.tsx  EdgeTest.tsx  ErrorBoundary.tsx  FileList.tsx  FileLoaderTab.tsx  FilePreviewModal.tsx  FilePreviewTooltip.tsx  FilterTab.tsx  (+14 more)
(+18 files in other folders)
