[project]
name = "docframe"
version = "0.1.0"
description = "Document analysis library from LDaCA, using polars backend"
authors = [
    {name = "Senhui (Alex) Guo", email = "senhui.guo@sydney.edu.au"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "polars>=1.0.0",
    "spacy>=3.7.0",
    "nltk>=3.8",
    "tqdm>=4.66.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0"
]
